--- a/views/home.hbs
+++ b/views/home.hbs
@@ -42,7 +42,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 	<body>
 		<!-- banner -->
-		<div class="main-agile">
+		<div class="main">
 			<div class="banner">
 				<div class="container">
 					<div class="top-nav">
@@ -85,12 +85,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							</div>
 						</nav>
 					</div>
-					<div class="w3l_banner_info">
+					<div class="banner_info">
 						<section class="slider">
 							<div class="flexslider">
 								<ul class="slides">
 									<li>
-										<div class="wthree_banner_info_grid">
+										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
 											<h3>Eduvy Supervision</h3>
 											<p>Quality Education needs Digitalisation</p>
@@ -98,7 +98,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 										</div>
 									</li>
 									<li>
-										<div class="wthree_banner_info_grid">
+										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
 											<h3>Eduvy Supervision</h3>
 											<p>We focus on your dream</p>
@@ -106,7 +106,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 										</div>
 									</li>
 									<li>
-										<div class="wthree_banner_info_grid">
+										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
 											<h3>Eduvy Supervision</h3>
 											<p>education needs complete solution</p>
@@ -152,34 +152,34 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- services -->
 		<div class="services" id="services" style="margin-top:56px">
 			<div class="container">
-				<h3 class="tittle-w3l">Our Services</h3>
-				<div class="w3-services-grids">
-					<div class="col-md-4 col-sm-4 col-xs-4 w3l-services-grid">
-						<div class="w3ls-services-img">
+				<h3 class="title">Our Services</h3>
+				<div class="services-grids">
+					<div class="col-md-4 col-sm-4 col-xs-4 services-grid">
+						<div class="services-img">
 							<i class="fa fa-users" aria-hidden="true"></i>
 						</div>
-						<div class="agileits-services-info">
+						<div class="services-info">
 							<h4>Student Management</h4>
 							<p>Parents as well as students will get regular updates about HOMEWORK, CLASSWORK, ATTENDANCE , NOTICES etc. on their
 								separate portal of EDUVY mobile app. Result and its analysis will be directly shown on parents portal in more efficient
 								way. </p>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-4 col-xs-4 w3l-services-grid">
-						<div class="w3ls-services-img">
+					<div class="col-md-4 col-sm-4 col-xs-4 services-grid">
+						<div class="services-img">
 							<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
 						</div>
-						<div class="agileits-services-info">
+						<div class="services-info">
 							<h4>FEE MANAGEMENT</h4>
 							<p>Push-on notifications &amp; SMS alert facility will be provided regularly to remind parents about the upcoming fees
 								, dues, etc. Online payment feature with online Digital Bill will surely provide a comfort zone to parents.</p>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-4 col-xs-4 w3l-services-grid">
-						<div class="w3ls-services-img">
+					<div class="col-md-4 col-sm-4 col-xs-4 services-grid">
+						<div class="services-img">
 							<i class="fa fa-leanpub" aria-hidden="true"></i>
 						</div>
-						<div class="agileits-services-info">
+						<div class="services-info">
 							<h4>SCHOOL PROFILE MANAGEMENT</h4>
 							<p>Paperless admission will be enhanced through our SaaS app . School products will get a digital platform to get more
 								comercialise. Also , Rules &amp; regulations , gallery ,Notices , Syllabus , details of teaching &amp; non-teaching
@@ -311,7 +311,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- gallery -->
 		<div id="gallery" class="gallery">
 			<div class="container">
-				<h3 class="tittle-w3l">Our Features</h3>
+				<h3 class="title">Our Features</h3>
 				<div class="gallery-grids">
 					<section>
 						<ul id="da-thumbs" class="da-thumbs">
@@ -405,7 +405,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- //gallery -->
 			<div class="service">
 				<div class="container">
-					<h3 class="tittle-w3l">Our Sector of Interest</h3>
+					<h3 class="title">Our Sector of Interest</h3>
 					<div class="inner_sec">
 						<div class="col-md-4 grid_info_main">
 							<div class="grid_info">
@@ -463,7 +463,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- newsletter -->
 		<div class="newsletter" style="margin-top:5px">
 			<div class="container">
-				<h3 class="tittle-w3l">Why us?</h3>
+				<h3 class="title">Why us?</h3>
 				<p class="nunc nunc1"> Eduvy is the best replacement for traditional paper based institute management system by bringing complete automation
 					in working procedure and to connect all stakeholders through our ERP system using centralized web portal and mobile
 					application,thus reducing comunication gap between all stakeholders (Students, Teachers, Parents)
@@ -474,7 +474,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- testimonials -->
 		<div class="testimonials">
 			<div class="container">
-				<h3 class="tittle-w3l">Our Trusted Partners</h3>
+				<h3 class="title">Our Trusted Partners</h3>
 				<div class="mis-stage">
 					<!-- The element to select and apply miSlider to - the class is optional -->
 					<ol class="mis-slider">
@@ -550,15 +550,15 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- mail -->
 		<div class="mail" id="mail">
 			<div class="container">
-				<h3 class="tittle-w3l">Mail Us</h3>
+				<h3 class="title">Mail Us</h3>
 				<div class="agileinfo_mail_grids">
 					<div class="col-md-7 agileinfo_mail_grid_right">
 						<form action="/send_mail" method="post">
-							<div class="col-md-6 col-sm-6 wthree_contact_left_grid">
+							<div class="col-md-6 col-sm-6 contact_left_grid">
 								<input type="text" name="Name" placeholder="Name" required="">
 								<input type="email" name="Email" placeholder="Email" required="">
 							</div>
-							<div class="col-md-6 col-sm-6 wthree_contact_left_grid">
+							<div class="col-md-6 col-sm-6 contact_left_grid">
 								<input type="text" name="Telephone" placeholder="Telephone" required="">
 								<input type="text" name="Subject" placeholder="Subject" required="">
 							</div>
@@ -620,34 +620,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- About -->
 		<div class="about" id="about">
 			<div class="container">
-				<h3 class="tittle-w3l">About Us</h3>
-				{{!--
-				<div class="col-md-6 agileinfo_banner_bottom_right">
-					<div class="agileinfo_banner_bottom_right1">
-						<h3>Join Now!</h3>
-						<div class="agileinfo_banner_bottom_right1_grid">
-							<ul>
-								<li>
-									<i class="fa fa-leanpub" aria-hidden="true"></i>Sed vulputate diam nisl, neque.</li>
-								<li>
-									<i class="fa fa-graduation-cap" aria-hidden="true"></i>Aliquam erat volutpat.</li>
-								<li>
-									<i class="fa fa-book" aria-hidden="true"></i>Duis porttitor magna leoat.</li>
-							</ul>
-						</div>
-					</div>
-				</div> --}} {{!--
-				<div class="col-md-6 agileinfo_banner_bottom_right">
-					<ul>
-						<li>
-							<i class="fa fa-leanpub" aria-hidden="true"></i>Sed vulputate diam nisl, neque.</li>
-						<li>
-							<i class="fa fa-graduation-cap" aria-hidden="true"></i>Aliquam erat volutpat.</li>
-						<li>
-							<i class="fa fa-book" aria-hidden="true"></i>Duis porttitor magna leoat.</li>
-					</ul>
-				</div> --}}
-
+				<h3 class="title">About Us</h3>
 				<div class="col-md-8 col-offset-2" style="margin-left:17%">
 					
 					<span class="about-us-content">
@@ -664,161 +637,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<!-- //About -->
 		<!-- Team -->
-		{{!-- <div class="team" id="faculties">
-			<div class="container">
-				<h3 class="tittle-w3l">Director's Desk</h3>
-				<div class="agile_banner_bottom_grids">
-					<div class="col-md-3 col-sm-3 col-xs-3 agile_banner_bottom_grid">
-						<div class="w3layouts_banner_bottom_grid" style="margin-left:25px">
-							<img src="images/shashank.jpg" alt=" " class="img-responsive" />
-							<div class="w3layouts_banner_bottom_grid_pos">
-								<p>Shashank Mishra</p>
-								<div class="social-bnr-agileits">
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/Eduvy-Supervision-1813005295387346/?modal=admin_todo_tour">
-												<i class="fa fa-facebook" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/EduvyS">
-												<i class="fa fa-twitter" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-google-plus" aria-hidden="true"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-3 agile_banner_bottom_grid">
-						<div class="w3layouts_banner_bottom_grid" style="margin-left:113px">
-							<img src="images/ravi.jpg" alt=" " class="img-responsive" />
-							<div class="w3layouts_banner_bottom_grid_pos">
-								<p>Ravi Kumar</p>
-								<div class="social-bnr-agileits">
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/Eduvy-Supervision-1813005295387346/?modal=admin_todo_tour">
-												<i class="fa fa-facebook" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/EduvyS">
-												<i class="fa fa-twitter" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-google-plus" aria-hidden="true"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-3 agile_banner_bottom_grid">
-						<div class="w3layouts_banner_bottom_grid" style="margin-left:250px;">
-							<img src="images/shubham.jpg" alt=" " class="img-responsive" />
-							<div class="w3layouts_banner_bottom_grid_pos">
-								<p>Shubhum Kumar</p>
-								<div class="social-bnr-agileits">
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/Eduvy-Supervision-1813005295387346/?modal=admin_todo_tour">
-												<i class="fa fa-facebook" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/EduvyS">
-												<i class="fa fa-twitter" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-google-plus" aria-hidden="true"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					{{!--
-					<div class="col-md-3 col-sm-3 col-xs-3 agile_banner_bottom_grid">
-						<div class="w3layouts_banner_bottom_grid">
-							<img src="images/t4.jpg" alt=" " class="img-responsive" />
-							<div class="w3layouts_banner_bottom_grid_pos">
-								<p>Heny Jon</p>
-								<div class="social-bnr-agileits">
-									<ul>
-										<li>
-											<a href="#">
-												<i class="fa fa-facebook" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-twitter" aria-hidden="true"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-google-plus" aria-hidden="true"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div> --}}
-				</div>
-			</div>
-		</div> --}}
 
-		{{!-- <div id="gallery" class="gallery">
-			<div class="container">
-				<h3 class="tittle-w3l">Director Desks</h3>
-				<div class="gallery-grids">
-					<section>
-						<ul id="da-thumbs" class="da-thumbs">
-							<li>
-								<a href="images/shashank.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="images/shashank.jpg" alt="" style="height: 234px;"/>
-									<div>
-										<h5>Assignments</h5>
-										<span>Get HW and CW regular updates</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/ravi.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="images/ravi.jpg" alt="" style="height: 234px;" />
-									<div>
-										<h5>Attendance</h5>
-										<span>Offline and online push on notifications of daily attendance</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="images/shubham.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="images/shubham.jpg" alt="" style="width: 383px;" />
-									<div>
-										<h5>Results corner</h5>
-										<span>Examination result and analysis(statical and graphical view)</span>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</section>
-				</div>
-			</div>
-		</div>				 --}}
 
 		<div class="map">
 			<iframe src="https://maps.google.com/maps?q=brahamputra%20hostel%20nit%20patna&t=&z=13&ie=UTF8&iwloc=&output=embed"
@@ -828,11 +647,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<!-- footer -->
 		<div class="footer">
 			<div class="container">
-				<div class="w3ls_footer_grid">
-					<div class="col-md-6 col-sm-8 col-xs-8 w3ls_footer_grid_left">
-						<div class="w3ls_footer_grid_left1">
+				<div class="footer_grid">
+					<div class="col-md-6 col-sm-8 col-xs-8 footer_grid_left">
+						<div class="footer_grid_left1">
 							<h3>Follow Us</h3>
-							<div class="w3ls_footer_grid_left1_pos">
+							<div class="footer_grid_left1_pos">
 								<ul>
 									<li>
 										<a href="https://www.facebook.com/Eduvy-Supervision-1813005295387346/?modal=admin_todo_tour" target="_blank" class="facebook">
@@ -854,19 +673,19 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-4 col-xs-4 w3ls_footer_grid_right">
+					<div class="col-md-6 col-sm-4 col-xs-4 footer_grid_right">
 						<h2>
 							<a href="index.html">Eduvy</a>
 						</h2>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
-				<div class="col-md-6 w3ls_footer_grid1_left">
+				<div class="col-md-6 footer_grid1_left">
 					<p>&copy; 2017 Literature. All rights reserved | Design by
-						<a href="https://school-in-pocket.herokuapp.com/">school-in-pocket</a>
+						<a href="https://school-in-pocket.herokuapp.com/">Eduvy</a>
 					</p>
 				</div>
-				<div class="col-md-6 w3ls_footer_grid1_right">
+				<div class="col-md-6 footer_grid1_right">
 					<ul>
 						<li>
 							<a href="#about" class="scroll">About</a>
